# RuView

./: README.md
docs/: user-guide.md
firmware/esp32-csi-node/: partitions_display.csv  sdkconfig.defaults
firmware/esp32-csi-node/main/: CMakeLists.txt  Kconfig.projbuild  adaptive_controller.c  csi_collector.c  main.c  sample_buffer.c  sample_buffer.h
scripts/: firmware-release-guard.sh
v2/crates/wifi-densepose-bfld/: Cargo.toml
v2/crates/wifi-densepose-bfld/src/: event.rs  lib.rs
v2/crates/wifi-densepose-bfld/tests/: event_privacy_gating.rs
v2/crates/wifi-densepose-mat/src/localization/: triangulation.rs
